<resources>
    <string name="app_name">My Pasta App</string>
    <string name="action_settings">Settings</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="order">Order</string>
    <string name="extra_meat_2_50_bgn">Extra meat (+2,50 BGN)</string>
    <string name="extra_cheese_2_bgn">Extra cheese (+2 BGN)</string>
    <string name="extra_veggies_1_bgn">Extra veggies (+1 BGN)</string>
    <string name="choose_city">City:</string>
    <string name="quantity">Quantity:</string>
    <string name="pick_time">Time of order</string>
    <string name="pick_date">Date of order</string>
    <string name="your_order">Your Order:</string>
    <string name="order_now">ORDER</string>
    <string name="favourites">Favourites</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="order_now_message">Order now?</string>
    <string name="confirm">Yes</string>
    <string name="cancel">No</string>


</resources>