<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/order_time_text_view"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_spinner"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="94dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="5dp"
        android:text="@string/quantity"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/quantity_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_button" />

    <Spinner
        android:id="@+id/quantity_spinner"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="18dp"
        android:entries="@array/quantities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/city_spinner"
        app:layout_constraintTop_toBottomOf="@+id/time_picker_button" />

    <CheckBox
        android:id="@+id/extra_cheese_checkBox"
        android:layout_width="376dp"
        android:layout_height="48dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="18dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/extra_cheese_2_bgn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pasta_name_view" />

    <CheckBox
        android:id="@+id/extra_veggies_checkbox"
        android:layout_width="376dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="17dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/extra_veggies_1_bgn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_meat_checkbox" />

    <CheckBox
        android:id="@+id/extra_meat_checkbox"
        android:layout_width="376dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="17dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/extra_meat_2_50_bgn"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_cheese_checkBox" />

    <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="278dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="18dp"
        android:entries="@array/cities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/city_text_view"
        app:layout_constraintTop_toBottomOf="@+id/quantity_spinner" />

    <TextView
        android:id="@+id/city_text_view"
        android:layout_width="94dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:text="@string/choose_city"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/city_spinner"
        app:layout_constraintStart_toStartOf="@+id/quantity_text_view"
        app:layout_constraintTop_toBottomOf="@+id/quantity_text_view" />

    <Button
        android:id="@+id/time_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:onClick="showTimePickerDialog"
        android:text="@string/pick_time"
        app:layout_constraintStart_toEndOf="@+id/date_picker_button"
        app:layout_constraintTop_toTopOf="@+id/date_picker_button" />

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="27dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date"
        app:layout_constraintBottom_toTopOf="@+id/quantity_text_view"
        app:layout_constraintEnd_toStartOf="@+id/time_picker_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_veggies_checkbox"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pasta_name_view"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="42dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/extra_cheese_checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_text_view"
        app:layout_constraintVertical_bias="0.12" />

    <TextView
        android:id="@+id/cart_text_view"
        android:layout_width="368dp"
        android:layout_height="40dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="22dp"
        android:text="@string/your_order"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="376dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_spinner" />

    <TextView
        android:id="@+id/order_date_text_view"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_spinner" />

    <Button
        android:id="@+id/order_now_button"
        android:layout_width="376dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/order_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>